--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "mocha": "^5.2.0"
   },
   "dependencies": {
+    "boom": "^7.3.0",
     "hapi": "^18.1.0",
+    "joi": "^14.3.1",
     "mongoose": "^5.3.11",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
