--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -w tests/*.test.js"
+    "test": "mocha tests/*.test.js"
   },
   "author": "erickwendel",
   "license": "ISC",
@@ -12,15 +12,18 @@
     "mocha": "^5.2.0"
   },
   "dependencies": {
-    "boom": "^7.3.0",
-    "hapi": "^18.1.0",
-    "hapi-swagger": "^10.0.2",
-    "inert": "^5.1.3",
-    "joi": "^14.3.1",
+    "bcrypt": "^3.0.2",
+    "boom": "^7.2.2",
+    "hapi": "^17.7.0",
+    "hapi-auth-jwt2": "^8.1.0",
+    "hapi-swagger": "^9.1.3",
+    "inert": "^5.1.2",
+    "joi": "^14.1.0",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.11",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.38.0",
-    "vision": "^5.4.4"
+    "vision": "^5.4.3"
   }
 }
