--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "modulo05-multidatabase",
+  "name": "curso-node-br",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
